trying to fix buttons on mobile

--- a/style.css
+++ b/style.css
@@ -90,6 +90,9 @@ body{
   order:1;
   padding:0;
   box-sizing: border-box;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
 }
 .plus:hover{
   cursor: pointer;
